<resources>
    <string name="app_name">Gym</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="begin_new_workout">Begin a new Workout</string>
    <string name="main_title">Let\'s Workout</string>
    <string name="workout_history">Previous Workouts</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="add_exercise">ADD EXERCISE</string>
    <string name="done">DONE</string>
    <string name="let_s_workout">Let\'s Workout!</string>
    <string name="test_exercise_name">Test Exercise Name</string>
    <string name="rating_bar_message">Track your progress!</string>
    <string name="enter_workout_name_here">Enter Workout Name Here!</string>
    <string name="finish_your_workout">Finish Your Workout</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="continue_workout">Continue Workout</string>
    <string name="new_workout">New Workout</string>
    <string name="increment_for_each_success">Increment for each success:</string>
</resources>
