<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:windowSoftInputMode="adjustPan"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/begin_new_workout"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/newWorkoutListView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addExerciseButton"
            android:text="@string/add_exercise"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/done"
            android:id="@+id/doneButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>
